apps/keycloak/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: auth
spec:
  parentRefs:
    - name: gateway-cloudflare
      namespace: kube-system
  hostnames:
    - "keycloak.maddin.dev"
    - "auth.maddin.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 80
